# model/Users.go
@@ -1,6 +1,6 @@
 package model
 
-type Credentials struct {
+type Users struct {
 	Username string `json:"username"`
 	Password string `json:"password"`
 }
